Footer And Images
Added bare-bones footer and images to nav bar and body content.

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <div class="main__container">
         <div class="navbar">
             <div class="navbar__container">
+                <img id="navbar__logo" src="./images/R.png" alt="Logo">
                 <ul class="navbar__menu">
                     <li class="navbar__item"><a href="#">Our Mission</a></li>
                     <li class="navbar__item"><a href="#">Locations</a></li>
@@ -36,11 +37,18 @@
                 <div class="secondblock">
                     <h3>Lorem Ipsum Beta</h3>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Reiciendis tenetur dignissimos commodi delectus iusto, voluptate pariatur molestias id vel ipsum ea nulla suscipit perferendis fuga quod deserunt dolores quasi ab?</p>
-
                 </div>
+
+                <img id="car" src="./images/car.svg")>
 
             </div>
         </div>
+
+        <footer>
+            <div class="footer__container">
+                <h4>© Daniel Giron 2021</h4>
+            </div>
+        </footer>
 
         <!--end of main container-->
     </div>
