--- a/index.html
+++ b/index.html
@@ -14,7 +14,9 @@
                 <ul class="navbar__menu">
                     <li class="navbar__item"><a href="#">Our Mission</a></li>
                     <li class="navbar__item"><a href="#">Locations</a></li>
-                    <li class="navbar__item" id="btn"><a href="#">Join Now</a></li>
+                    <li class="navbar__item" id="btn">
+                        <span class="joinbtn"><a href="#">Join Now</a></span>
+                    </li>
                 </ul>
             </div>
         </div>
@@ -46,7 +48,7 @@
 
         <footer>
             <div class="footer__container">
-                <h4>© Daniel Giron 2021</h4>
+                <span class="footer__text"><h4>© Daniel Giron 2021</h4></span>
             </div>
         </footer>
 
