Adding entry field
The beginnings to an entry field containing input and select forms have been added, not yet completed.

--- a/index.html
+++ b/index.html
@@ -29,6 +29,35 @@
             </div>
         </div>
 
+        <div class="entryfield__container">
+            <form action="">
+                <span class="origin__container">
+                    <label for="origin">Origin</label>
+                    <input type="text" id="origin" name="origin" placeholder="I am travelling from...">
+                </span>
+                <br>
+                <span class="dest__container">
+                    <label for="destination">Destination</label>
+                    <input type="text" id="destination" name="destination" placeholder="I am going to...">
+                </span>
+                <br>
+                <span class="pass__container">
+                    <label for="pass">Passengers</label>
+                    <span class="pass__select">
+                        <select id="pass" name="pass">
+                            <option value="1">1</option>
+                            <option value="2">2</option>
+                            <option value="3">3</option>
+                        </select>
+                    </span>
+                    
+                </span>
+                
+                <br>
+                <input type="submit" value="Submit">
+              </form>
+        </div>
+
         <div class="content">
             <div class="content__container">
                 <div class="firstblock">
